# GMSK_demodulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Includes/: GMSK_demodulator.hpp  tests.hpp
MatLab/: GMSK_demodulator.m  finite_diffs.m  gmsk_example.mat  main.asv  main.m  volk_32fc_x2_multiply_conjugate_32fc_u_sse3.m
Sources/: GMSK_demodulator.cpp  main.cpp
